tests/ui/type_unknown_member.stderr
error: tests/ui/type_unknown_member.ql:7:5: unknown member `age` on type `User`
      user.age
      ^^^^^^^^ member access here
