tests/ui/type_unknown_member.ql
struct User {
    name: String,
}

fn main() -> Int {
    let user = User { name: "ql" }
    user.age
    return 0
}
